# MapReader

./: .all-contributorsrc  .all_contributors.rc  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  Contributors.md  LICENSE  README.md  _config.yml  broken_files.txt  env-azure-blob-all.yml  env-init-all.yml  env-init-from-history.yml  env-pip-mapreader-all.yml  env-pip-mapreader-from-history.yml  env-pip-mapreader-geo-all.yml  how_to_contribute_to_docs.md  mapreader_modelcard_template.md  model_card_template.md  model_card_template.md.j2  pyproject.toml  requirements.txt  setup.cfg  setup.py  text-requirements.txt  text_requirements.txt  versioneer.py  ways_of_working.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: documentation_update.md  feature_request.md
.github/workflows/: changelog.yml  codeql-analysis.yml  codeql.yml  joss-draft-pdf.yml  metrics.yml  mr_ci.yml  mr_ci_text_spotting.yml  mr_pip_ci.yml  publish-to-conda-forge.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  python-publish.yml  unit_tests.yml
assets/css/: style.scss
conda/: meta.yaml
conda.recipe/: meta.yaml
container/: Dockerfile  README.md  requirements.txt  run.sh  test.output  test.py
docs/: .contents.rst.swp  requirements.txt
docs/source/: About.rst  Annotate.rst  Beginners-info.rst  Coc.rst  Contribution-guide.rst  Developers-guide.rst  Download.rst  Events.rst  Input-guidance.rst  Install.rst  Load.rst  Non-geospatial-examples.rst  Patchify.rst  Process.rst  Project-cv.rst  Train.rst  User-guide.rst  Worked-examples.rst  conf.py  index.rst  ways-of-working.rst
examples/classification_one_inch_maps_001/: 001_retrieve_patchify_plot.ipynb  002_annotation.ipynb  003_train_classifier.ipynb  004_inference.ipynb  annotation_tasks.yaml
examples/classification_plant_phenotype/: 001_patchify_plot.ipynb  002_annotation.ipynb  003_train_classifier.ipynb  004_inference.ipynb
examples/geospatial/: README.md
examples/maps/: README.md
examples/non-geospatial/: README.md
examples/non-maps/: README.md
examples/postproc/: compare_with_stopsgb.ipynb  map-display.ipynb  map-sheets-and-patches.qgs  results-post-processing.ipynb
examples/quick_start/: quick_start.ipynb
examples/quick_start_historian/: quick_start.ipynb
examples/quick_start_maps/: quick_start.ipynb
mapreader/: __init__.py  __main__.py  _version.py
mapreader/annotate/: __init__.py  annotator.py  load_annotate.py  utils.py
mapreader/classify/: classifier.py  classifier_context.py  custom_models.py  datasets.py  lightning_classifier.py  load_annotations.py  pytorchLightningClassifier.py
mapreader/download/: azure_access.py  data_structures.py  downloader.py  downloader_utils.py  (+8 more)
nls_metadata/: metadata_OS_One_Inch_GB_WFS_light.json
paper/: paper.bib  paper.md
piffle/: __init__.py  iiif.py  image.py  presentation.py
test_text_spotting/: test_deepsolo_runner.py  test_dptext_runner.py  test_maptext_runner.py
testing_notebooks/: download.ipynb  geospatial-masking.ipynb  line-detection.ipynb  line-mask.ipynb  text-mask.ipynb
tests/: ignore_test_non_geo_pipeline.py  test_annotations_loader.py  test_annotator.py  test_classifier.py  test_geo_pipeline.py  test_geo_utils.py  test_image.py  test_import.py  test_load.py  test_loadPatches_loadParents.py  test_load_geo_utils.py  test_load_images_loadParents.py  test_load_loader.py  test_load_loader_add_metadata.py  test_load_loader_loadParents.py  test_load_loader_loadPatches.py  test_loader.py  test_loader_filepaths.py  test_metadata.py  test_non_geo_pipeline.py  test_piffle.py  test_post_processing.py  test_presentation.py  test_sheet_downloader.py  test_sheet_downloader_mock_example.py  test_utils_geo_utils.py  test_utils_load_frames.py
worked_examples/: annotation_tasks.yaml
(+337 files in other folders)
