[tool.poetry]
name = "mapreader"
version = "0.3.5.2"
description = "A computer vision pipeline for the semantic exploration of maps/images at scale"
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.0"
numpy = "^1.21.5"
pandas = "^1.3.4"
pyproj = "^3.2.0"
azure-storage-blob = "^12.9.0"
aiohttp = "^3.8.1"
shapely = "^1.8.0"
nest-asyncio = "^1.5.1"
scikit-image = "0.*"
scikit-learn = "^1.0.1"
torch = "^1.10.0"
torchvision = "^0.11.1"
jupyter = "^1.0.0"
ipykernel = "^6.21.1"
ipyannotate = "^0.1.0b0"
cython = "^0.29.24"
pyyaml = "^6.0"
tensorboard = "^2.7.0"
parhugin = "^0.0.3"
geopy = "^2.1.0"
rasterio = "^1.2.10"
keplergl = "^0.3.2"
simplekml = "^1.3.6"
Sphinx = "^6.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
